[package]
edition = "2018"
name = "slog_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5" 
slog = "2.4.1" 
slog-async = "2.3.0" #提供异步日志记录，将日志记录调用与主线程分离
slog-json = "2.2.0" #将消息以 JSON 格式输出到任何写入器（writer）的管道。
