[package]
edition = "2018"
name = "redis_async"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.11" #与 tokio 编码解码器一起使用，可以有效地将字节流转换为给定的帧。
futures = "0.1.25" #处理异步代码提供更清晰的抽象。
lazy_static = "1.2.0" 
resp = {git = "https://github.com/creativcoder/resp"} 
tokio = "0.1.13" #封装 mio 并提供一个运行异步代码的运行时
tokio-codec = "0.1.1" #它允许用户将来自网络的字节流转换为给定类型
