[package]
edition = "2021"
name = "httpie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = {version = "3", features = ["derive"]}# 命令行解析工具    
colored = "2" # 命令行终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式化
mime = "0.3" # 处理 mime 类型
reqwest = {version = "0.11", features = ["json"]}# http 请求                       
syntect = "4" # 语法高亮
tokio = {version = "1", features = ["full"]}# 异步处理运行时
