[package]
default-run = "teacher-service" # 如果不指明 --bin 二进制文件就默认运行这个
edition = "2021" 
name = "webservice" 
version = "0.1.0" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3"
chrono = {version = "0.4.19", features = ["serde"]}# 时间处理
serde = {version = "1.0.132", features = ["derive"]}# 序列化反序列化JSON 

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"
